Moved from HTTP to HTTPS protocol for API calls

--- a/hypercat.css
+++ b/hypercat.css
@@ -1,6 +1,6 @@
 /*
   CityVerve - HyperCat Demo
-  http://developer.cityverve.org.uk
+  https://developer.cityverve.org.uk
   https://github.com/cityverve/hypercat-demo
 
   Released under the MIT license
